removed some unused apps from the hue menu

--- a/config/hue/hue.ini
+++ b/config/hue/hue.ini
@@ -138,7 +138,7 @@
 
   # Comma separated list of apps to not load at server startup.
   # e.g.: pig,zookeeper
-  app_blacklist=aws,beeswax,hbase,impala,jobsub,metadata,metastore,notebook,oozie,pig,rdbms,search,security,sqoop
+  app_blacklist=beeswax,impala,security,rdbms,jobsub,pig,hbase,sqoop,zookeeper,metastore,oozie,indexer,search
 
   # The directory where to store the auditing logs. Auditing is disable if the value is empty.
   # e.g. /var/log/hue/audit.log
